--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,80 +7,68 @@
 </head>
 
 <body>
-<h1>Stwórz swoje własne taco!</h1>
+<h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
 
-<form method="POST" th:object="${design}">
-    <div th:if="${#fields.hasErrors()}">
-        <span class="validationError"></span>
-    </div>
+<form method="POST" th:object="${taco}">
 
     <span class="validationError"
           th:if="${#fields.hasErrors('ingredients')}"
-          th:errors="*{ingredients}">Musisz wybrać przynajmniej jeden składnik!!!</span>
-    <br/>
+          th:errors="*{ingredients}">Ingredient Error</span>
 
     <div class="grid">
-
         <div class="ingredient-group" id="wraps">
-            <h3>Wybierz naleśnik:</h3>
+            <h3>Designate your wrap:</h3>
             <div th:each="ingredient : ${wrap}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
 
         <div class="ingredient-group" id="proteins">
-            <h3>Wybierz mięso:</h3>
+            <h3>Pick your protein:</h3>
             <div th:each="ingredient : ${protein}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
 
         <div class="ingredient-group" id="cheeses">
-            <h3>Wybierz sery:</h3>
+            <h3>Choose your cheese:</h3>
             <div th:each="ingredient : ${cheese}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
 
         <div class="ingredient-group" id="veggies">
-            <h3>Wybierz warzywa:</h3>
+            <h3>Determine your veggies:</h3>
             <div th:each="ingredient : ${veggies}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
 
         <div class="ingredient-group" id="sauces">
-            <h3>Wybierz sosy:</h3>
+            <h3>Select your sauce:</h3>
             <div th:each="ingredient : ${sauce}">
-                <input name="ingredients" type="checkbox" th:value="${ingredient.id}"
-                />
+                <input name="ingredients" type="checkbox" th:value="${ingredient.id}" />
                 <span th:text="${ingredient.name}">INGREDIENT</span><br/>
             </div>
         </div>
-
     </div>
 
     <div>
-        <div th:if="${#fields.hasErrors()}">
-        <span class="validationError">
-        </span>
-        </div>
-        <h3>Nazwij swoje taco:</h3>
+
+
+        <h3>Name your taco creation:</h3>
         <input type="text" th:field="*{name}"/>
         <span class="validationError"
               th:if="${#fields.hasErrors('name')}"
-              th:errors="*{name}">Nazwa musi mieć przynajmniej 5 liter.</span>
+              th:errors="*{name}">Name Error</span>
         <br/>
-        <button>Zatwierdź</button>
+
+        <button>Submit your taco</button>
     </div>
 </form>
 </body>
